[package]
name = "rusty-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
http = "0.2.9"
warp = "0.3.5"
async-graphql = "6.0.4"
async-graphql-warp = "6.0.4"
